--- a/ApiGateway/Yarp.Gateway/appsettings.json
+++ b/ApiGateway/Yarp.Gateway/appsettings.json
@@ -11,7 +11,7 @@
     "Routes": {
       "users-route": {
         "ClusterId": "users-cluster",
-        "AuthorizationPolicy": "authenticated",
+       // "AuthorizationPolicy": "authenticated",
         "Match": {
           "Path": "/users-api/{**catch-all}"
         },
@@ -34,14 +34,14 @@
       "users-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://users.api:5286"
+            "Address": "http://localhost:5286"
           }
         }
       },
       "products-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://products.api:5199"
+            "Address": "http://localhost:5199"
           }
         }
 
